--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2016-present Open Networking Foundation
+  ~ Copyright 2016-2023 Open Networking Foundation (ONF) and the ONF Contributors
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -39,7 +39,7 @@
         </api.description>
         <api.package>org.opencord.olttopology.rest</api.package>
         <olttopology.api.version>1.3.0-SNAPSHOT</olttopology.api.version>
-        <sadis.api.version>5.6.0</sadis.api.version>
+        <sadis.api.version>5.11.1</sadis.api.version>
     </properties>
 
     <dependencies>
